An initial pollForWork() is now done after initialisation to allow any post-initialisation activities to prevent entering the (MCU) low-power mode by default.

--- a/src/firmware-tests/Main/InitialisationCompleted/Makefile
+++ b/src/firmware-tests/Main/InitialisationCompleted/Makefile
@@ -1,8 +1,15 @@
 HEX_FILES=\
-	InterruptEnableTest.hex
+	InterruptEnableTest.hex \
+	InitialPollBeforeLowPowerStateTest.hex
 
 INTERRUPT_ENABLE_OBJ_FILES=\
 	InterruptEnableTest.o \
+	$(DUMMY_ISR_OBJ_FILE) \
+	../ResetDummies.o \
+	../../PowerManagement/PowerManagementDummies.o
+
+INITIAL_POLL_BEFORE_LOW_POWER_STATE_OBJ_FILES=\
+	InitialPollBeforeLowPowerStateTest.o \
 	$(DUMMY_ISR_OBJ_FILE) \
 	../ResetDummies.o
 
@@ -13,5 +20,8 @@ clean:
 
 InterruptEnableTest.hex: $(OBJ_FILES) $(INTERRUPT_ENABLE_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(INTERRUPT_ENABLE_OBJ_FILES)
+
+InitialPollBeforeLowPowerStateTest.hex: $(OBJ_FILES) $(INITIAL_POLL_BEFORE_LOW_POWER_STATE_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(INITIAL_POLL_BEFORE_LOW_POWER_STATE_OBJ_FILES)
 
 include $(MAKEFILE_RULES)
