Enabling the ADC now calls ensureFastClock(), with allowSlowClock() being called when it's disabled.

--- a/src/firmware-tests/Adc/EnableDisable/Makefile
+++ b/src/firmware-tests/Adc/EnableDisable/Makefile
@@ -1,12 +1,24 @@
 HEX_FILES=\
 	EnableDisableAdcTest.hex \
-	EnableAdcCalledTwiceTest.hex
+	EnableAdcCalledTwiceTest.hex \
+	EnableAdcCallsEnsureFastClockTest.hex \
+	DisableAdcCallsAllowSlowClockTest.hex
 
 ENABLE_DISABLE_ADC_OBJ_FILES=\
-	EnableDisableAdcTest.o
+	EnableDisableAdcTest.o \
+	../../PowerManagement/PowerManagementDummies.o
 
 ENABLE_ADC_CALLED_TWICE_OBJ_FILES=\
-	EnableAdcCalledTwiceTest.o
+	EnableAdcCalledTwiceTest.o \
+	../../PowerManagement/PowerManagementDummies.o
+
+ENABLE_ADC_CALLS_ENSURE_FAST_CLOCK_OBJ_FILES=\
+	EnableAdcCallsEnsureFastClockTest.o \
+	../../PowerManagement/PowerManagementMocks.o
+
+DISABLE_ADC_CALLS_ALLOW_SLOW_CLOCK_OBJ_FILES=\
+	DisableAdcCallsAllowSlowClockTest.o \
+	../../PowerManagement/PowerManagementMocks.o
 
 all: $(HEX_FILES)
 
@@ -18,5 +30,11 @@ EnableDisableAdcTest.hex: $(OBJ_FILES) $(ENABLE_DISABLE_ADC_OBJ_FILES)
 
 EnableAdcCalledTwiceTest.hex: $(OBJ_FILES) $(ENABLE_ADC_CALLED_TWICE_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(ENABLE_ADC_CALLED_TWICE_OBJ_FILES)
+
+EnableAdcCallsEnsureFastClockTest.hex: $(OBJ_FILES) $(ENABLE_ADC_CALLS_ENSURE_FAST_CLOCK_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(ENABLE_ADC_CALLS_ENSURE_FAST_CLOCK_OBJ_FILES)
+
+DisableAdcCallsAllowSlowClockTest.hex: $(OBJ_FILES) $(DISABLE_ADC_CALLS_ALLOW_SLOW_CLOCK_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(DISABLE_ADC_CALLS_ALLOW_SLOW_CLOCK_OBJ_FILES)
 
 include $(MAKEFILE_RULES)
