Stopped ISR from ticking the clock for non-timer1 overflows.

--- a/src/firmware-tests/Platform/Clock/TimerWiring/Makefile
+++ b/src/firmware-tests/Platform/Clock/TimerWiring/Makefile
@@ -1,17 +1,21 @@
+HEX_FILES=\
+	Timer1OverflowIncrementsTimeTest.hex \
+	IsrDoesNotIncrementTimeTest.hex \
+	IsrWithNonClockTickTest.hex
+
 OBJ_FILES+=\
 	$(PLATFORM_DIR)/Isr.o \
 	$(PLATFORM_DIR)/Arithmetic32.o \
 	../../Lcd/LcdContrastDummies.o
-
-HEX_FILES=\
-	Timer1OverflowIncrementsTimeTest.hex \
-	IsrDoesNotIncrementTimeTest.hex
 
 TIMER1_OVERFLOW_INCREMENTS_TIME_OBJ_FILES=\
 	Timer1OverflowIncrementsTimeTest.o
 
 ISR_DOES_NOT_INCREMENT_TIME_OBJ_FILES=\
 	IsrDoesNotIncrementTimeTest.o
+
+ISR_WITH_NON_CLOCK_TICK_OBJ_FILES=\
+	IsrWithNonClockTickTest.o
 
 all: $(HEX_FILES)
 
@@ -23,5 +27,8 @@ Timer1OverflowIncrementsTimeTest.hex: $(OBJ_FILES) $(TIMER1_OVERFLOW_INCREMENTS_
 
 IsrDoesNotIncrementTimeTest.hex: $(OBJ_FILES) $(ISR_DOES_NOT_INCREMENT_TIME_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(ISR_DOES_NOT_INCREMENT_TIME_OBJ_FILES)
+
+IsrWithNonClockTickTest.hex: $(OBJ_FILES) $(ISR_WITH_NON_CLOCK_TICK_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(ISR_WITH_NON_CLOCK_TICK_OBJ_FILES)
 
 include $(MAKEFILE_RULES)
