--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /src/utilities/gpsim2tuple/gpsim2tuple
 /src/utilities/lpf-rc/lpf-rc
 /src/utilities/mean/mean
+/src/utilities/cordic/cordic-float
 /**/.~*
 /src/schematics/~*.sch
 /src/schematics/~*.pcb
