--- a/src/utilities/Makefile
+++ b/src/utilities/Makefile
@@ -2,8 +2,10 @@ all:
 	$(MAKE) -C gpsim2tuple all
 	$(MAKE) -C lpf-rc all
 	$(MAKE) -C mean all
+	$(MAKE) -C cordic all
 
 clean:
 	$(MAKE) -C gpsim2tuple clean
 	$(MAKE) -C lpf-rc clean
 	$(MAKE) -C mean clean
+	$(MAKE) -C cordic clean
