Hacked together a fixed-point implementation of CORDIC.  Although the hack is somewhat messy it is now in a position to be refined into a proper firmware implementation.  The sin() and cos() functions agree with the C built-in functions to within 0.08%, and the asin() and acos() functions map most values with far less than 1% error (up to 2.56% maximum error for the extremes).

--- a/src/utilities/trigonometry/cordic/Makefile
+++ b/src/utilities/trigonometry/cordic/Makefile
@@ -7,10 +7,16 @@ LIBS=-lm
 CORDIC_FLOAT_EXE_FILE=cordic-float
 CORDIC_FLOAT_OBJ_FILES=cordic-float.o
 
-all: cordic-float
+CORDIC_FIXED_EXE_FILE=cordic-fixed
+CORDIC_FIXED_OBJ_FILES=cordic-fixed.o
+
+all: cordic-float cordic-fixed
 
 cordic-float: $(CORDIC_FLOAT_OBJ_FILES)
 	$(LD) $(LDARGS) -o $(CORDIC_FLOAT_EXE_FILE) $(CORDIC_FLOAT_OBJ_FILES) $(LIBS)
+
+cordic-fixed: $(CORDIC_FIXED_OBJ_FILES)
+	$(LD) $(LDARGS) -o $(CORDIC_FIXED_EXE_FILE) $(CORDIC_FIXED_OBJ_FILES) $(LIBS)
 
 clean:
 	rm -Rf cordic-*tables.txt
