--- a/src/firmware-tests/Platform/Makefile
+++ b/src/firmware-tests/Platform/Makefile
@@ -21,6 +21,7 @@ all: $(TEST_DOUBLE_OBJ_FILES)
 	$(MAKE) -C Arithmetic4 all
 	$(MAKE) -C Arithmetic32 all
 	$(MAKE) -C ArithmeticBcd all
+	$(MAKE) -C Cordic all
 	$(MAKE) -C Smps all
 	$(MAKE) -C Motor all
 	$(MAKE) -C ShiftRegister all
@@ -43,6 +44,7 @@ clean:
 	$(MAKE) -C Arithmetic4 clean
 	$(MAKE) -C Arithmetic32 clean
 	$(MAKE) -C ArithmeticBcd clean
+	$(MAKE) -C Cordic clean
 	$(MAKE) -C Smps clean
 	$(MAKE) -C Motor clean
 	$(MAKE) -C ShiftRegister clean
