--- a/src/firmware-tests/Platform/Cordic/Initialisation/Makefile
+++ b/src/firmware-tests/Platform/Cordic/Initialisation/Makefile
@@ -1,12 +1,21 @@
+ASARGS+=-I $(PLATFORM_DIR)/Cordic
+
 HEX_FILES=\
-	InitialisationChainTest.hex
+	InitialisationChainTest.hex \
+	InitialStateTest.hex
 
 TEST_DOUBLE_OBJ_FILES=\
-	../PollAfterCordicMock.o
+	../PollAfterCordicDummy.o
 
 INITIALISATION_CHAIN_OBJ_FILES=\
 	$(TEST_DOUBLE_OBJ_FILES) \
+	../InitialiseAfterCordicMock.o \
 	InitialisationChainTest.o
+
+INITIAL_STATE_OBJ_FILES=\
+	$(TEST_DOUBLE_OBJ_FILES) \
+	../InitialiseAfterCordicDummy.o \
+	InitialStateTest.o
 
 all: $(HEX_FILES)
 
@@ -15,5 +24,8 @@ clean:
 
 InitialisationChainTest.hex: $(OBJ_FILES) $(INITIALISATION_CHAIN_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(INITIALISATION_CHAIN_OBJ_FILES)
+
+InitialStateTest.hex: $(OBJ_FILES) $(INITIAL_STATE_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(INITIAL_STATE_OBJ_FILES)
 
 include $(MAKEFILE_RULES)
