Added the arcSine() function to the CORDIC implementation.

--- a/src/firmware-tests/Platform/Cordic/Makefile
+++ b/src/firmware-tests/Platform/Cordic/Makefile
@@ -4,6 +4,7 @@ export OBJ_FILES=\
 	$(FIRMWARE_CORE_OBJ_FILES) \
 	$(TEST_FIXTURE_OBJ_FILES) \
 	$(ASSERT_NO_ISR_OBJ_FILE) \
+	$(PLATFORM_DIR)/Arithmetic16.a \
 	$(PLATFORM_DIR)/Arithmetic32.a \
 	$(PLATFORM_DIR)/Flash.o
 
@@ -18,6 +19,7 @@ all:
 	$(MAKE) -C Poll all
 	$(MAKE) -C IsCordicIdle all
 	$(MAKE) -C Sine all
+	$(MAKE) -C ArcSine all
 	$(MAKE) -C Cosine all
 
 clean:
@@ -26,6 +28,7 @@ clean:
 	$(MAKE) -C Poll clean
 	$(MAKE) -C IsCordicIdle clean
 	$(MAKE) -C Sine clean
+	$(MAKE) -C ArcSine clean
 	$(MAKE) -C Cosine clean
 
 include $(MAKEFILE_RULES)
