Added an exhaustive test for all CORDIC sine() calls.

--- a/src/firmware-tests/Platform/Cordic/Sine/Makefile
+++ b/src/firmware-tests/Platform/Cordic/Sine/Makefile
@@ -1,5 +1,6 @@
 HEX_FILES=\
-	SineTest.hex
+	SineTest.hex \
+	AllSineTest.hex
 
 TEST_DOUBLE_OBJ_FILES=\
 	../InitialiseAfterCordicDummy.o \
@@ -9,6 +10,10 @@ SINE_OBJ_FILES=\
 	$(TEST_DOUBLE_OBJ_FILES) \
 	SineTest.o
 
+ALL_SINE_OBJ_FILES=\
+	$(TEST_DOUBLE_OBJ_FILES) \
+	AllSineTest.o
+
 all: $(HEX_FILES)
 
 clean:
@@ -16,5 +21,8 @@ clean:
 
 SineTest.hex: $(OBJ_FILES) $(SINE_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(SINE_OBJ_FILES)
+
+AllSineTest.hex: $(OBJ_FILES) $(ALL_SINE_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(ALL_SINE_OBJ_FILES)
 
 include $(MAKEFILE_RULES)
