Added an exhaustive test for all CORDIC cosine() calls.

--- a/src/firmware-tests/Platform/Cordic/Cosine/Makefile
+++ b/src/firmware-tests/Platform/Cordic/Cosine/Makefile
@@ -1,5 +1,6 @@
 HEX_FILES=\
-	CosineTest.hex
+	CosineTest.hex \
+	AllCosineTest.hex
 
 TEST_DOUBLE_OBJ_FILES=\
 	../InitialiseAfterCordicDummy.o \
@@ -9,6 +10,10 @@ COSINE_OBJ_FILES=\
 	$(TEST_DOUBLE_OBJ_FILES) \
 	CosineTest.o
 
+ALL_COSINE_OBJ_FILES=\
+	$(TEST_DOUBLE_OBJ_FILES) \
+	AllCosineTest.o
+
 all: $(HEX_FILES)
 
 clean:
@@ -16,5 +21,8 @@ clean:
 
 CosineTest.hex: $(OBJ_FILES) $(COSINE_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(COSINE_OBJ_FILES)
+
+AllCosineTest.hex: $(OBJ_FILES) $(ALL_COSINE_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(ALL_COSINE_OBJ_FILES)
 
 include $(MAKEFILE_RULES)
