Added an exhaustive test for all CORDIC arcSine() calls.

--- a/src/firmware-tests/Platform/Cordic/ArcSine/Makefile
+++ b/src/firmware-tests/Platform/Cordic/ArcSine/Makefile
@@ -1,5 +1,6 @@
 HEX_FILES=\
-	ArcSineTest.hex
+	ArcSineTest.hex \
+	AllArcSineTest.hex
 
 TEST_DOUBLE_OBJ_FILES=\
 	../InitialiseAfterCordicDummy.o \
@@ -9,6 +10,10 @@ ARC_SINE_OBJ_FILES=\
 	$(TEST_DOUBLE_OBJ_FILES) \
 	ArcSineTest.o
 
+ALL_ARC_SINE_OBJ_FILES=\
+	$(TEST_DOUBLE_OBJ_FILES) \
+	AllArcSineTest.o
+
 all: $(HEX_FILES)
 
 clean:
@@ -16,5 +21,8 @@ clean:
 
 ArcSineTest.hex: $(OBJ_FILES) $(ARC_SINE_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(ARC_SINE_OBJ_FILES)
+
+AllArcSineTest.hex: $(OBJ_FILES) $(ALL_ARC_SINE_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(ALL_ARC_SINE_OBJ_FILES)
 
 include $(MAKEFILE_RULES)
