--- a/src/firmware-tests/Platform/Cordic/Cosine/Makefile
+++ b/src/firmware-tests/Platform/Cordic/Cosine/Makefile
@@ -12,6 +12,7 @@ COSINE_OBJ_FILES=\
 
 ALL_COSINE_OBJ_FILES=\
 	$(TEST_DOUBLE_OBJ_FILES) \
+	../AllCordicSpaceTestFixture.o \
 	AllCosineTest.o
 
 all: $(HEX_FILES)
