Added the arcCosine() function to the CORDIC implementation.

--- a/src/firmware-tests/Platform/Cordic/Makefile
+++ b/src/firmware-tests/Platform/Cordic/Makefile
@@ -21,6 +21,7 @@ all: $(TEST_DOUBLE_OBJ_FILES) AllCordicSpaceTestFixture.o
 	$(MAKE) -C Sine all
 	$(MAKE) -C ArcSine all
 	$(MAKE) -C Cosine all
+	$(MAKE) -C ArcCosine all
 
 clean:
 	$(RM) -f $(BUILD_ARTEFACT_PATTERN)
@@ -30,5 +31,6 @@ clean:
 	$(MAKE) -C Sine clean
 	$(MAKE) -C ArcSine clean
 	$(MAKE) -C Cosine clean
+	$(MAKE) -C ArcCosine clean
 
 include $(MAKEFILE_RULES)
