Added idle checks to the CORDIC functions.

--- a/src/firmware-tests/Platform/Cordic/ArcCosine/Makefile
+++ b/src/firmware-tests/Platform/Cordic/ArcCosine/Makefile
@@ -1,6 +1,8 @@
 HEX_FILES=\
 	ArcCosineTest.hex \
-	AllArcCosineTest.hex
+	AllArcCosineTest.hex \
+	ArcCosineWhenIdleTest.hex \
+	ArcCosineWhenNotIdleTest.hex
 
 TEST_DOUBLE_OBJ_FILES=\
 	../InitialiseAfterCordicDummy.o \
@@ -15,6 +17,14 @@ ALL_ARC_COSINE_OBJ_FILES=\
 	../AllCordicSpaceTestFixture.o \
 	AllArcCosineTest.o
 
+ARC_COSINE_WHEN_IDLE_OBJ_FILES=\
+	$(TEST_DOUBLE_OBJ_FILES) \
+	ArcCosineWhenIdleTest.o
+
+ARC_COSINE_WHEN_NOT_IDLE_OBJ_FILES=\
+	$(TEST_DOUBLE_OBJ_FILES) \
+	ArcCosineWhenNotIdleTest.o
+
 all: $(HEX_FILES)
 
 clean:
@@ -25,5 +35,11 @@ ArcCosineTest.hex: $(OBJ_FILES) $(ARC_COSINE_OBJ_FILES)
 
 AllArcCosineTest.hex: $(OBJ_FILES) $(ALL_ARC_COSINE_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(ALL_ARC_COSINE_OBJ_FILES)
+
+ArcCosineWhenIdleTest.hex: $(OBJ_FILES) $(ARC_COSINE_WHEN_IDLE_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(ARC_COSINE_WHEN_IDLE_OBJ_FILES)
+
+ArcCosineWhenNotIdleTest.hex: $(OBJ_FILES) $(ARC_COSINE_WHEN_NOT_IDLE_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(ARC_COSINE_WHEN_NOT_IDLE_OBJ_FILES)
 
 include $(MAKEFILE_RULES)
