--- a/src/utilities/Makefile
+++ b/src/utilities/Makefile
@@ -3,9 +3,11 @@ all:
 	$(MAKE) -C lpf-rc all
 	$(MAKE) -C mean all
 	$(MAKE) -C trigonometry all
+	$(MAKE) -C sunrise-sunset all
 
 clean:
 	$(MAKE) -C gpsim2tuple clean
 	$(MAKE) -C lpf-rc clean
 	$(MAKE) -C mean clean
 	$(MAKE) -C trigonometry clean
+	$(MAKE) -C sunrise-sunset clean
