Added mean anomaly to the Sun Event algorithm.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /src/utilities/gpsim2tuple/gpsim2tuple
 /src/utilities/lpf-rc/lpf-rc
 /src/utilities/mean/mean
+/src/utilities/sunrise-sunset/sunrise-sunset
 /src/utilities/trigonometry/cordic/cordic-float
 /src/utilities/trigonometry/cordic/cordic-fixed
 /src/utilities/trigonometry/smoothstep/smoothstep
