Added equatorial centre correction and ecliptic longitude of the Sun calculations to the Sun Event algorithm.

--- a/src/utilities/sunrise-sunset/Makefile
+++ b/src/utilities/sunrise-sunset/Makefile
@@ -2,7 +2,7 @@ CC=gcc
 CCARGS=-ansi -Wall -pedantic -std=c99 -c
 LD=gcc
 LDARGS=
-LIBS=
+LIBS=-lm
 
 EXE_FILE=sunrise-sunset
 OBJ_FILES=sunrise-sunset.o
