The accurate Sunrise / Sunset algorithm was always going to bea stretch but I think it's now too difficult to implement in the 4K I have to play with.  Started investigating the curve-fitting algorithms again to see if I can produce a reasonable approximation with fewer calculations and program words.

--- a/src/utilities/sunrise-sunset/Makefile
+++ b/src/utilities/sunrise-sunset/Makefile
@@ -1,17 +1,7 @@
-CC=gcc
-CCARGS=-ansi -Wall -pedantic -std=c99 -c
-LD=gcc
-LDARGS=
-LIBS=-lm
-
-EXE_FILE=sunrise-sunset
-OBJ_FILES=sunrise-sunset.o
-
-all: $(OBJ_FILES)
-	$(LD) $(LDARGS) -o $(EXE_FILE) $(OBJ_FILES) $(LIBS)
+all:
+	$(MAKE) -C accurate all
+	$(MAKE) -C curve-fitting all
 
 clean:
-	rm -Rf $(OBJ_FILES) $(EXE_FILE)
-
-%.o: %.c
-	$(CC) $(CCARGS) -o $@ $<
+	$(MAKE) -C accurate clean
+	$(MAKE) -C curve-fitting clean
