Removed arcSine() and arcCosine() from the firmware CORDIC implementation as they are no longer required for the Sunrise and Sunset equations.  This saves a whopping 630 program words (15% of available flash), which should be enough for the curve-fitting algorithm.

--- a/src/firmware/Platform/Cordic/Makefile
+++ b/src/firmware/Platform/Cordic/Makefile
@@ -13,20 +13,9 @@ OBJ_FILES=\
 	CalculateZState.o \
 	EndOfIterationState.o \
 	StoreSineCosineResultState.o \
-	ArcSineInitialiseState.o \
-	SqrtInitialiseState.o \
-	HyperbolicCalculateXState.o \
-	HyperbolicCalculateYState.o \
-	HyperbolicEndOfIterationState.o \
-	StoreSqrtIntermediateResultState.o \
-	ArcTangentInitialiseState.o \
-	StoreArcSineResultState.o \
-	StoreArcCosineResultState.o \
 	Shift.o \
 	Sine.o \
-	ArcSine.o \
-	Cosine.o \
-	ArcCosine.o
+	Cosine.o
 
 all: $(LIB_FILENAME)
 
