The ISR now prevents sleep for a single iteration of the polling loop, which gives the pollers an opportunity to process the output of the ISR if it occurs in the instruction immediately prior to the sleep.

--- a/src/firmware-tests/Platform/Isr/Makefile
+++ b/src/firmware-tests/Platform/Isr/Makefile
@@ -3,7 +3,8 @@ export OBJ_FILES=\
 	$(SUT_OBJ_FILE) \
 	$(PLATFORM_CORE_OBJ_FILES) \
 	$(TEST_FIXTURE_OBJ_FILES) \
-	$(CURDIR)/../Lcd/LcdContrastDummies.o
+	$(CURDIR)/../Lcd/LcdContrastDummies.o \
+	$(CURDIR)/../PowerManagementDummies.o
 
 TEST_DOUBLE_OBJ_FILES=\
 	InitialiseAfterIsrDummy.o \
@@ -12,9 +13,11 @@ TEST_DOUBLE_OBJ_FILES=\
 
 all: $(TEST_DOUBLE_OBJ_FILES)
 	$(MAKE) -C Initialisation all
+	$(MAKE) -C PreventSleep all
 
 clean:
 	$(RM) -f $(BUILD_ARTEFACT_PATTERN)
 	$(MAKE) -C Initialisation clean
+	$(MAKE) -C PreventSleep clean
 
 include $(MAKEFILE_RULES)
