--- a/src/firmware-tests/Platform/Makefile
+++ b/src/firmware-tests/Platform/Makefile
@@ -9,7 +9,8 @@ TEST_DOUBLE_OBJ_FILES=\
 	InitialiseAfterResetMock.o \
 	InitialiseAfterResetDummy.o \
 	InitialiseAfterTimer0Dummy.o \
-	ResetFlagsStubs.o
+	ResetFlagsStubs.o \
+	PowerManagementDummies.o
 
 all: $(TEST_DOUBLE_OBJ_FILES)
 	$(MAKE) -C Main all
