--- a/src/firmware/Makefile
+++ b/src/firmware/Makefile
@@ -4,7 +4,8 @@ OBJ_FILES=\
 	Boot.o \
 	ConfigWords.o \
 	Platform.a \
-	Ui.a
+	Ui.a \
+	SunriseSunset.a
 
 all: $(HEX_FILENAME)
 
@@ -12,6 +13,7 @@ clean:
 	$(RM) -f $(BUILD_ARTEFACT_PATTERN)
 	$(MAKE) -C Platform clean
 	$(MAKE) -C Ui clean
+	$(MAKE) -C SunriseSunset clean
 
 $(HEX_FILENAME): $(OBJ_FILES)
 	$(LD) $(LDARGS) -o $(HEX_FILENAME) $(OBJ_FILES)
