Initialisation of the Sunrise / Sunset times to zero.

--- a/src/firmware-tests/SunriseSunset/Initialisation/Makefile
+++ b/src/firmware-tests/SunriseSunset/Initialisation/Makefile
@@ -1,5 +1,6 @@
 HEX_FILES=\
-	InitialisationChainTest.hex
+	InitialisationChainTest.hex \
+	SunriseAndSunsetTimesTest.hex
 
 TEST_DOUBLE_OBJ_FILES=\
 	../PollAfterSunriseSunsetMock.o
@@ -8,6 +9,10 @@ INITIALISATION_CHAIN_OBJ_FILES=\
 	$(TEST_DOUBLE_OBJ_FILES) \
 	InitialisationChainTest.o
 
+SUNRISE_AND_SUNSET_TIMES_OBJ_FILES=\
+	$(TEST_DOUBLE_OBJ_FILES) \
+	SunriseAndSunsetTimesTest.o
+
 all: $(HEX_FILES)
 
 clean:
@@ -15,5 +20,8 @@ clean:
 
 InitialisationChainTest.hex: $(OBJ_FILES) $(INITIALISATION_CHAIN_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(INITIALISATION_CHAIN_OBJ_FILES)
+
+SunriseAndSunsetTimesTest.hex: $(OBJ_FILES) $(SUNRISE_AND_SUNSET_TIMES_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(SUNRISE_AND_SUNSET_TIMES_OBJ_FILES)
 
 include $(MAKEFILE_RULES)
