Firmware Sunrise / Sunset calculations - intermediate check-in as I need to make a deviation to build a 32x16 bit division routine.

--- a/src/firmware/SunriseSunset/Makefile
+++ b/src/firmware/SunriseSunset/Makefile
@@ -1,11 +1,14 @@
 LIB_FILENAME=../SunriseSunset.a
 OBJ_FILES=\
 	Registers.o \
+	RegisterLoadAndStore.o \
+	Coefficients.o \
 	Initialise.o \
 	CalculateSunriseAndSunset.o \
 	Poll.o \
 	UninitialisedState.o \
 	IdleState.o \
+	CalculateSunriseState.o \
 	StoreSunsetState.o
 
 all: $(LIB_FILENAME)
