Added div32x16 for dividing 32-bit integers (RAA:RAD) by 16-bit integers (RBC:RBD).

--- a/src/firmware-tests/Platform/Arithmetic32/Makefile
+++ b/src/firmware-tests/Platform/Arithmetic32/Makefile
@@ -9,11 +9,13 @@ all:
 	$(MAKE) -C Add all
 	$(MAKE) -C Negate all
 	$(MAKE) -C SignExtend all
+	$(MAKE) -C Divide all
 
 clean:
 	$(RM) -f $(BUILD_ARTEFACT_PATTERN)
 	$(MAKE) -C Add clean
 	$(MAKE) -C Negate clean
 	$(MAKE) -C SignExtend clean
+	$(MAKE) -C Divide clean
 
 include $(MAKEFILE_RULES)
